Fixed the header lapping on the recommended slider on smaller screen

--- a/src/jobs/components/RecommendedJobs.css
+++ b/src/jobs/components/RecommendedJobs.css
@@ -1,5 +1,5 @@
 .recommended {
-  margin: 5rem 0 5rem 0;
+  margin: 15rem 0 5rem 0;
 }
 
 .items-conte {
